--- a/releases/com/technofovea/index.html
+++ b/releases/com/technofovea/index.html
@@ -4,7 +4,7 @@
             <!-- Anti-overwrite token 711CD4AFDDF4F6E6E1A9986267B5FEC62DD273FE8A63E236D3351E3E846CCDE2 -->
         </head>
         <body>
-            <h1>Generated listing for releases</h1>
+            <h1>Generated listing for technofovea</h1>
             <h2>Created 2011-03-29 02:53:45</h2>
             <table>
                 <tr>
@@ -15,7 +15,7 @@
                 
                 <tr>
                     <td>[DIR]</td>
-                    <td><a href="./com/index.html">com/</a></td>
+                    <td><a href="./jhllib/index.html">jhllib/</a></td>
                     <td></td>
                 </tr>
     
